--- a/percolate-capstone/public/styles/loginSignup.css
+++ b/percolate-capstone/public/styles/loginSignup.css
@@ -31,15 +31,15 @@
   width: 100%;
   text-align: center;
   flex-flow: column;
-
 }
 .loginbody {
   position: relative;
   left: 25%;
   top: 12.5%;
-  background-color: white;
+  background-image: url('../whiteBack2.png');
+  background-size: contain;
   width: 50%;
-  height: 50%;
+  height: 55%;
   border: gray solid 0.5px;
   border-radius: 5px;
   display: flex;
@@ -67,6 +67,11 @@
   height: 30%;
   flex-grow: 1;
 }
+.bottomBarSup {
+  background-color: #3b6064;
+  height: 30%;
+  flex-grow: 1;
+}
 #bottomText {
   position: relative;
   font-size: 48px;
@@ -79,8 +84,8 @@
   position:relative;
   background: #3B6064;
   color: white;
-  width: 25vw;
-  height: 35px;
+  width: 25.5vw;
+  height: 4vh;
   font-size: 20px;
   border-radius: 5px;
   text-align: center;
@@ -90,11 +95,11 @@
   background: #2c484b;
 }
 .signup {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(220, 245, 0);
   color: rgb(0, 0, 0);
   margin: 5px;
-  width: 25vw;
-  height: 35px;
+  width: 20vw;
+  height: 4vh;
   font-size: 20px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
@@ -103,14 +108,14 @@
   background-color: rgb(202, 202, 202);
 }
 .error {
-  width: 100px;
-  height: 10px;
+  width: 40%;
+  height: 4vh;
   color: red;
-  font-size: 10px;
+  font-size: 15px;
 }
 .errorLogin {
   color: red;
-  font-size: 13px;
+  font-size: 15px;
   align-self: center;
 }
 .email {
@@ -121,19 +126,41 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 30px;
+  height: 4vh;
+  column-gap:20px;
+  margin-left:20px;
+  text-decoration: None;
 }
 .signupBox {
-  width: 405px;
-  text-align: left;
+  width: 35vw;
+  text-align: center;
 }
 .signupTitle {
-  width: 405px;
+  width: 20vw;
   text-align: center;
 }
 .form {
   display: flex;
   flex-direction: column;
   width: 100%;
-  row-gap: 20px;
+  row-gap: 15px;
+}
+#signupform {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  text-align: center;
+}
+.signupPage {
+  background: #3B6064;
+  color: white;
+  width: 10vw;
+  height: 35px;
+  font-size: 20px;
+  border-radius: 5px;
+  text-align: center;
+  align-self: center;
+}
+.signupPage:hover {
+  background: #2c484b;
 }
