--- a/percolate-capstone/public/styles/nav.css
+++ b/percolate-capstone/public/styles/nav.css
@@ -19,7 +19,9 @@
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
