--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,111 @@
+.header-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  z-index: 99 !important;
+  background-color: #3b6064;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
+/** Logo */
+.logo {
+  flex-grow: 0.5;
+  max-width: 50px;
+  max-height: 50px;
+}
+
+/** Percolate phrase*/
+.oursite {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: auto 20px auto 5px;
+  color: #c9e4ca;
+  display: flex;
+  text-align: center;
+}
+.brand {
+  margin-top: 5px;
+}
+
+/** Space between search bar*/
+.blank {
+  flex-grow: 1;
+  display: flex;
+}
+
+/** The products button*/
+
+.about {
+  flex-grow: 0.5;
+  color: #c9e4ca;
+  height: 30%;
+  border-radius: 10px;
+  padding: 5px;
+  margin: auto;
+}
+.about:hover {
+  background: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+.space {
+  flex-grow: 1;
+}
+
+/** ======= SEARCH BAR ======= */
+
+.search {
+  flex-grow: 3.5;
+  background: #ffffff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1.25px solid rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  border-radius: 25px;
+  padding: 5px;
+  margin: 10px;
+  text-align: left;
+}
+
+.search-input {
+  left: 5px;
+  margin: 2px;
+  margin-left: 10px;
+  width: 90%;
+  height: 100%;
+  border: 0;
+}
+
+.search-label {
+  margin-right: 10px;
+}
+/** ======= Profile  ======= */
+
+.loginBox {
+  display: flex;
+  align-items: center;
+}
+.profPic {
+  background-color: #c9e4ca;
+  margin-top: 5px;
+  margin-right: 5px;
+  width: 35px;
+  height: 35px;
+  align-self: center;
+  overflow: hidden;
+  object-fit: cover;
+  box-shadow: 0 10px 30px 1px rgb(0 0 0 / 30%);
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+.userName {
+  margin-right: 5px;
+  color: #c9e4ca;
+}
