--- a/public/styles/loginSignup.css
+++ b/public/styles/loginSignup.css
@@ -1,10 +1,8 @@
 .login {
-  position: fixed;
-  top: 0;
-  left: 0;
+
   background-image: url('../background.jpeg');
   background-size: cover;
-  width: 100%;
+  width: '100vw';
   height: 100%;
   text-align: center;
   align-content: center;
