--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,11 @@
+body {
+  margin:0 auto;
+  height:100vh;
+}
+#root {
+  height: 100vh;
+}
 .header-navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -12,7 +16,9 @@
   background-color: #3b6064;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
+.singlepage {
+  height: 100%;
+}
 /** Logo */
 .logo {
   flex-grow: 0.5;
