--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,8 +16,8 @@ body {
   background-color: #3b6064;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.singlepage {
-  height: 100%;
+#singlepage {
+  height: 100vh;
 }
 /** Logo */
 .logo {
