--- a/public/styles/singleCoffee.css
+++ b/public/styles/singleCoffee.css
@@ -1,15 +1,29 @@
 .single-coffee {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 
+  border: 3px solid black;
 }
 
 .single-coffee-container {
   display: flex;
   flex-direction: row;
+  border: 3px dashed blue;
 }
 
 #single-coffee-img {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 250px;
+  max-height: 250px;
+  left: 5.57%;
+  right: 54.43%;
+  top: 19.25%;
+  bottom: 24.75%;
+
+  background: url(image.png);
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 28px;
 }
