user profile top half css complete

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -107,7 +107,7 @@ body {
   align-self: center;
   overflow: hidden;
   object-fit: cover;
-  box-shadow: 0 10px 30px 1px rgb(0 0 0 / 30%);
+  box-shadow: 0 0px 0px 1px white;
   border-radius: 50%;
   transition: transform 0.3s ease;
 }
