--- a/public/styles/addReview.css
+++ b/public/styles/addReview.css
@@ -1,6 +1,22 @@
 #form_review_new {
   margin-top: 2vh;
-  width: auto;
+  width: 50vw;
+  height: 15vh;
   color: #c9e4ca;
   background-color: #3b6064;
+}
+
+.new-review-container {
+  align-items: center;
+}
+
+.form-input-submit-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.form-text-box{
+  border-radius: 5px;
 }
