--- a/public/styles/reviewList.css
+++ b/public/styles/reviewList.css
@@ -1,3 +1,19 @@
 .review-list-item {
-  max-width: 10vw;
+  max-width: 50vw;
+  background-color: #FFFFFF;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+#content{
+  text-align: justify;
+  padding: 10px
+}
+
+.review-user-rating {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+}
+
