--- a/public/styles/loginSignup.css
+++ b/public/styles/loginSignup.css
@@ -129,6 +129,17 @@
   margin-left:20px;
   text-decoration: None;
 }
+.mod {
+  align-items:center;
+  justify-content: flex-end;
+}
+.formName {
+  align-self: flex-end;
+  font-size: 1rem;
+}
+.blank3 {
+  width: 10vw;
+}
 .signupBox {
   width: 35vw;
   text-align: center;
@@ -144,6 +155,12 @@
   row-gap: 15px;
 }
 #signupform {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  text-align: center;
+}
+.signupform {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
