--- a/public/styles/singleUser.css
+++ b/public/styles/singleUser.css
@@ -1,7 +1,48 @@
 .singleUserPageBox {
   height: 100%;
 }
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+}
+
+.close {
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
 .profileBox {
+  display:flex;
+  flex-flow:column;
   height: 60%;
   background-color: #fffef9;
 }
@@ -16,27 +57,28 @@
   position: relative;
   z-index: 0;
 }
-.cover {
-  height: 100%;
-  width: 100%;
-}
-.shadow {
-  position: absolute;
-  height: 100%;
-  width: 70%;
-  box-shadow: inset 0px -200px 200px -200px #000000;
-}
-.shadow img {
-  position: relative;
-  z-index: -1;
-}
+  .cover {
+    height: 100%;
+    width: 1400px;
+  }
+  .shadow {
+    position: absolute;
+    height: 100%;
+    width: 1400px;
+    box-shadow: inset 0px -200px 200px -200px #000000;
+  }
+  .shadow img {
+    position: relative;
+    z-index: -1;
+  }
+
+
 .ownpage {
   position: relative;
-  top:-25px;
+  top: -25px;
   width: 200px;
   height: 200px;
   box-shadow: 0px 0px 0px 5px #fffef9;
-
 }
 .profilePicNavBox {
   display: flex;
@@ -45,19 +87,59 @@
 }
 .profileNavBar {
   display: flex;
-  flex-grow: 1;
+  flex-grow: 2;
   justify-content: end;
-  align-items:center;
-  flex-flow:column;
+  align-items: center;
+  flex-flow: column;
 }
 .blank2 {
-  flex-grow: 1;
+  flex-grow: 0.7;
 }
 .divider {
-  width:120%;
+  width: 100%;
+  padding:0px;
+}
+.pictureBox {
+  flex-grow: 0.1;
+  display: flex;
+  justify-content: end;
 }
 .menu {
   display: flex;
   justify-content: space-around;
   width: 100%;
+}
+.editProfileButton {
+  padding-top:8px;
+  align-self: flex-end;
+  background: #3b6064;
+  color: #fffef9;
+  width: 10vw;
+  height: 3vh;
+  font-size: 1vw;
+  border-radius: 5px;
+  text-align: center;
+}
+.editProfileButton:hover {
+  background: #2c484b;
+}
+@media only screen and (max-width: 800px) {
+  .profileBox {
+  height: 50%;
+  background-color: #fffef9;
+}
+  .cover {
+    height: auto;
+    width: 100%;
+  }
+  .shadow {
+    position: absolute;
+    height: auto;
+    width: 100%;
+    box-shadow: inset 0px -200px 200px -200px #000000;
+  }
+  .shadow img {
+    position: relative;
+    z-index: -1;
+  }
 }
