--- a/public/styles/singleUser.css
+++ b/public/styles/singleUser.css
@@ -1,6 +1,9 @@
 .singleUserPageBox {
   height: 100%;
 }
+
+/* Dialog Modal form page css */
+
 .modal {
   position: fixed;
   top: 50%;
@@ -14,7 +17,18 @@
   outline: none;
   padding: 20px;
 }
-
+.mod {
+  align-items: center;
+  justify-content: flex-end;
+}
+.formName {
+  align-self: flex-end;
+  font-size: 1rem;
+}
+.blank3 {
+  width: 10vw;
+}
+/* x button */
 .close {
   position: absolute;
   right: 32px;
@@ -26,10 +40,11 @@
 .close:hover {
   opacity: 1;
 }
-.close:before, .close:after {
+.close:before,
+.close:after {
   position: absolute;
   left: 15px;
-  content: ' ';
+  content: "";
   height: 33px;
   width: 2px;
   background-color: #333;
@@ -40,15 +55,13 @@
 .close:after {
   transform: rotate(-45deg);
 }
+
+/* Cover page and picture */
 .profileBox {
-  display:flex;
-  flex-flow:column;
+  display: flex;
+  flex-flow: column;
   height: 60%;
   background-color: #fffef9;
-}
-.body {
-  background-color: #f7f7f7;
-  height: 100%;
 }
 .profileCover {
   display: flex;
@@ -57,21 +70,21 @@
   position: relative;
   z-index: 0;
 }
-  .cover {
-    height: 100%;
-    width: 1400px;
-  }
-  .shadow {
-    position: absolute;
-    height: 100%;
-    width: 1400px;
-    box-shadow: inset 0px -200px 200px -200px #000000;
-  }
-  .shadow img {
-    position: relative;
-    z-index: -1;
-  }
-
+/* image shade bottom */
+.cover {
+  height: 100%;
+  width: 1400px;
+}
+.shadow {
+  position: absolute;
+  height: 100%;
+  width: 1400px;
+  box-shadow: inset 0px -200px 200px -200px #000000;
+}
+.shadow img {
+  position: relative;
+  z-index: -1;
+}
 
 .ownpage {
   position: relative;
@@ -97,7 +110,7 @@
 }
 .divider {
   width: 100%;
-  padding:0px;
+  padding: 0px;
 }
 .pictureBox {
   flex-grow: 0.1;
@@ -110,7 +123,7 @@
   width: 100%;
 }
 .editProfileButton {
-  padding-top:8px;
+  padding-top: 8px;
   align-self: flex-end;
   background: #3b6064;
   color: #fffef9;
@@ -123,11 +136,14 @@
 .editProfileButton:hover {
   background: #2c484b;
 }
+
+/* adjust screen part */
+
 @media only screen and (max-width: 800px) {
   .profileBox {
-  height: 50%;
-  background-color: #fffef9;
-}
+    height: 50%;
+    background-color: #fffef9;
+  }
   .cover {
     height: auto;
     width: 100%;
@@ -142,4 +158,42 @@
     position: relative;
     z-index: -1;
   }
+}
+
+/* body part */
+.body {
+  background-color: #f7f7f7;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.leftBody {
+  width: 25%;
+  display: flex;
+  justify-content: start;
+  flex-flow: column;
+  align-items: center;
+  margin-top: 30px;
+}
+.intro {
+  display: flex;
+  flex-flow: column;
+  background-color: white;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+}
+.favoriteTitle {
+  align-self: flex-start;
+  font-size: 1rem;
+  padding-bottom: 5px;
+}
+.favCoffee {
+  width: 200px;
+  height: 200px;
+  align-self: center;
+}
+
+.rightBody {
+  width: 50%;
 }
