--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -97,6 +97,7 @@ body {
 /** ======= Profile  ======= */
 
 .loginBox {
+  cursor: pointer;
   display: flex;
   align-items: center;
 }
@@ -116,4 +117,12 @@ body {
 .username {
   margin-right: 5px;
   color: #c9e4ca;
+}
+.signoutButton {
+  cursor: pointer;
+  padding:5px;
+  color: #c9e4ca;
+  border-radius: 20px;
+  font-size: 12px;
+  border:1px solid white;
 }
