--- a/public/styles/singleUser.css
+++ b/public/styles/singleUser.css
@@ -213,4 +213,11 @@
 }
 .rightBody {
   width: 50%;
+  display: flex;
+  flex-flow: column;
+  background-color: white;
+  justify-content: start;
+  align-items: center;
+  margin-top: 30px;
+  margin-left:30px;
 }
