--- a/public/styles/singleReview.css
+++ b/public/styles/singleReview.css
@@ -1,9 +1,16 @@
 .single-review-container {
   display: flex;
   flex-direction: column;
-  width: 60vw;
-  margin-top: 10px;
   align-items: center;
+  padding-top: 10px;
+}
+
+.comment-list-item {
+  display: flex;
+  flex-direction: column;
+  width: 40vw;
+  margin-top: 10px;
+
   border-radius: 9px;
   background-color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
