--- a/public/styles/singleUser.css
+++ b/public/styles/singleUser.css
@@ -173,20 +173,22 @@
   justify-content: start;
   flex-flow: column;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .intro {
   display: flex;
   flex-flow: column;
   background-color: white;
-  padding-left: 20px;
-  padding-bottom: 20px;
+  border-radius: 10px;
   width: 100%;
+  padding:10px;
+  margin:5px;
 }
 .favoriteTitle {
   align-self: flex-start;
   font-size: 1rem;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
+  margin-top:10px;
 }
 .favCoffee {
   width: 200px;
@@ -196,8 +198,9 @@
 .followers {
   width: 100%;
   padding: 10px;
-  margin-top: 20px;
+  margin: 5px;
   height: 100%;
+  border-radius: 10px;
   background-color: rgb(255, 255, 255);
 }
 .followerListBox {
