search is done for now

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -275,6 +275,7 @@ p strong {
 .hit-photo{
   max-width: 50px;
   max-height: 50px;
+  margin-right: 15px;
 }
 
 .ais-Hits{
@@ -332,7 +333,7 @@ p strong {
 .ais-SearchBox-form{
   align-self: center;
 }
-.cardAdjustment { 
+.cardAdjustment {
   margin-top:0px;
 }
 .cardDown {
