--- a/public/styles/singleUser.css
+++ b/public/styles/singleUser.css
@@ -191,8 +191,10 @@
   margin-top:10px;
 }
 .favCoffee {
-  width: 200px;
-  height: 200px;
+  max-width: 200px;
+  max-height: 200px;
+  width:auto;
+  height: auto;
   align-self: center;
 }
 .followers {
