--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0 auto;
   height: auto;
   font-family: sans-serif;
+  background-color: #e5e5e5;
 }
 .loading {
   height: 100%;
@@ -23,7 +24,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 #singlepage {
-  height: auto;
+  height: 100vh;
   background-color: #e5e5e5;
 }
 /** Logo */
