Commence more styling on Single Coffee and Listed Review

--- a/public/styles/likeButton.css
+++ b/public/styles/likeButton.css
@@ -1,6 +1,6 @@
 .like_button {
-  color: #c9e4ca;
-  background-color: #3b6064;
+  color: #3b6064;
+  background-color: #c9e4ca;
   border-radius: 5px;
   padding: 10px;
   max-height: 17px;
