accordion feature is showing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -423,7 +423,12 @@ p strong {
 .coffeeInfo {
   text-align: left;
 }
-
+.show {
+  display: block;
+}
+.noShow {
+  display: none;
+}
 #map {
   height: 80%;
   width: 80%;
