now comments are showing but need to fix css

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -429,6 +429,11 @@ p strong {
 .noShow {
   display: none;
 }
+.insideComment {
+  margin:0;
+  pading:0;
+  width: auto;
+}
 #map {
   height: 80%;
   width: 80%;
