--- a/public/styles/reviewList.css
+++ b/public/styles/reviewList.css
@@ -7,7 +7,6 @@
 .review-list-item > label {
   position: absolute;
 }
-
 a {
   text-decoration: none;
   color: black;
@@ -30,17 +29,28 @@ a:active {
 }
 .review-info {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
-  padding: 10px;
   flex-wrap: wrap;
+  padding-right: 1vw;
 }
 .review-author-photo {
   height: auto;
-  width: 100px;
+  width: 70px;
 }
 .review-single-detail {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-height: 3vh;
+}
+.review-single-detail > label {
+  float: left;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  padding-right: 3px;
+}
+.review-single-detail > h4 {
+  font-weight: normal;
 }
