some css fix and link for user photo added

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -228,6 +228,10 @@ body {
   display: flex;
   flex-flow: column;
 }
+.postHead {
+  height: 50px;
+  width: 50px;
+}
 .postNow {
   flex-grow: 0.5;
   width: 60px;
@@ -431,8 +435,12 @@ p strong {
 }
 .insideComment {
   margin:0;
-  pading:0;
-  width: auto;
+  padding:0;
+  width: 600px;
+  word-wrap: break-word
+}
+.commentPadding {
+  padding:5px;
 }
 #map {
   height: 80%;
